Qt 4.1.1 is a bug-fix release. It maintains both forward and backward
compatibility (source and binary) with Qt 4.1.0.

The Qt version 4.1 series is binary compatible with the 4.0.x series.
Applications compiled for 4.0 will continue to run with 4.1.

****************************************************************************
*                           General                                        *
****************************************************************************

...

****************************************************************************
*                          Library                                         *
****************************************************************************

...

General improvements
--------------------

- QXmlSimpleReader
	A significant (approx. 50x) speedup in QXmlSimpleReader when
	parsing documents which contain internal or external entities.

Platform-Specific changes
-------------------------

Windows:

X11:

Mac OS X:

3rd-party libraries
-------------------